--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "10.2.0",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "graphql": "14.5.8",
+    "jwt-decode": "2.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-reanimated": "1.2.0",
+    "react-native-screens": "^2.18.1",
+    "react-native-vector-icons": "6.6.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "4.0.10",
+    "react-navigation-drawer": "2.3.3",
+    "react-navigation-stack": "1.10.3",
+    "react-navigation-tabs": "2.5.6"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
