--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@expo/vector-icons": "10.2.0",
     "@react-native-async-storage/async-storage": "^1.14.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
-    "graphql": "14.5.8",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "jwt-decode": "2.2.0",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "1.3.0",
